[package]
name = "dll_injection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
name = "alfred"
crate-type = ["cdylib"]


[[bin]]
path = "src/main.rs"
name = "injector"

[dependencies]
color-eyre = "0.6.2"
ctor = "0.1.26"
detour = { git = "https://github.com/Hpmason/detour-rs", branch = "fix-nightly1.67.0-changes" }
dll-syringe = "0.15.0"
patternscan = "1.2.0"
process-memory = "0.5.0"
toy-arms = "0.9.4"
toy-arms-bindings = "0.1.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
winapi = "0.3.9"
windows = "0.44.0"

