[package]
name = "injector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
panic = "abort"

[dependencies]
dll-syringe = "0.15.0"
eframe = "0.21.3"
futures = "0.3.27"
rfd = "0.11.2"
thiserror = "1.0.39"
